# transformer-attention

./: .gitignore  LEARNING_NOTES.md  README.md  demo_all.py  demo_components.py  pyproject.toml  train_toy.py  visualize_attention.py
tests/: __init__.py  test_attention.py  test_layers.py  test_model.py  test_positional.py  test_setup.py
transformer/: __init__.py  attention.py  datasets.py  inference.py  layers.py  model.py  positional.py  training.py  utils.py
